--- a/index.html
+++ b/index.html
@@ -30,6 +30,37 @@
         <li>Sleeping</li>
     </ol>
     <hr>
+
+    <h2>Technical skills</h2>
+
+    <table border="1">
+        <!--tr - table row-->
+        <tr>
+            <th>Skill</th>
+            <th>Rating</th>
+        </tr>
+
+        <tr>
+            <!--td - table data-->
+            <td>HTML/CSS</td>
+            <td>	
+                &#9885;	&#9885;
+            </td>
+        </tr>
+
+        <tr>
+            <td>JavaScript</td>
+            <td>&#9885;</td>
+        </tr>
+
+        <tr>
+            <td>C#</td>
+            <td>&#9885;	&#9885;	&#9885;	&#9885;</td>
+        </tr>
+    </table>
+
+    <hr>
+
     <footer>
         <p>Egert Arr &#169 2021</p>
     </footer>
