--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>Computer games</li>
         <li>Sleeping</li>
     </ol>
+    <a href="Hobbies.html" target="_blank">Visit my hobbies Page</a>
     <hr>
 
     <h2>Technical skills</h2>
