--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     
+    <h1>My Hobbies</h1>
+
+    <table>
+
+        <tr>
+            <th>Eating and digesting</th>
+            <th>Computer games</th>
+            <th>Sleeping</th>
+        </tr>
+        <tr>
+            <td><img src="img/human-digestive-system.jpg" alt="Digestive system"width="300"></td>
+            <td><img src="img/ComputerGames.jpg" alt="Old man winning in ForkKnife"width="300"></td>
+            <td><img src="img/RatSleeping.jpg" alt="Rat sleeping with a teddy"width="300"></td>
+        </tr>
+
+    </table>
+    <a href="index.html">Back to the lit main page</a>
+    <footer>
+        <p>Egert Arr &#169 2021</p>
+    </footer>
 </body>
 </html>
